# monoforce

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.py  package.xml  setup.py
config/: .gitignore  (+12 more)
monoforce/: .gitignore  LICENSE  README.md  cloudproc.py  package.xml  requirements.txt  setup.cfg  setup.py  vis.py
monoforce/config/: .gitignore  dphys_cfg.yaml  lss_cfg.yaml  lss_cfg_husky_oru.yaml  lss_cfg_resize.yaml  lss_cfg_tradr.yaml  lss_cfg_tradr2.yaml  lss_cfg_wildscenes.yaml
monoforce/config/data_sample/husky/calibration/: img_statistics.yaml  transformations.yaml
monoforce/config/data_sample/marv/calibration/: transformations.yaml
monoforce/config/data_sample/marv/clouds/: 1727353472_601360559.npz
monoforce/config/data_sample/tradr/calibration/: transformations.yaml
monoforce/config/data_sample/tradr/clouds/: 1666267171_394104004.npz  1725981157_851716757.npz
monoforce/config/robots/: marv.yaml
monoforce/config/rviz/: monoforce.rviz
monoforce/config/singularity/: build.sh  recepie.def  requirements.txt
monoforce/configs/: world_config.py
monoforce/data/: RobinGas  kkt
monoforce/datasets/: rough.py  wildscenes.py
monoforce/docker/: Dockerfile  Makefile  requirements.txt
monoforce/docs/: DATA.md  DPHYS.md  INSTALL.md  PHYSICS_ENGINE.md  TERRAIN_ENCODER.md
monoforce/examples/: bevfusion.ipynb  diff_physics.ipynb  eval_results.ipynb  explore_data.ipynb  explore_data_rgb_rigid_terrain.ipynb  explore_robot_meshes.ipynb  lidarbev.ipynb  lstm_traj_pred.ipynb  monoforce_inference_with_robingas_data.ipynb  monoforce_inference_with_rough_data.ipynb  rgbd_data.ipynb  train_friction_head_with_pretrained_terrain_encoder.ipynb  traj_lstm.ipynb  trajectory_shooting_with_torch_diff_physics.ipynb  trajectory_shooting_with_warp_diff_physics.ipynb  voxelnet.ipynb
monoforce/launch/: demo.launch.py  monoforce.launch.py  physics_engine.launch.py  terrain_encoder.launch.py  terrain_encoder_launch.py
monoforce/models/physics_engine/engine/: benchmark.py  engine.py
monoforce/models/physics_engine/utils/: dynamics.py  meshes.py
monoforce/models/traj_predictor/: dphys_config.py
monoforce/monoforce/: ros.py  utils.py
monoforce/monoforce/configs/: engine_config.py  robot_config.py
monoforce/monoforce/datasets/: coco.py
monoforce/monoforce/models/terrain_encoder/: lss.py  utils.py
monoforce/monoforce/nodes/: camera_publisher.py  monoforce_node.py  physics_engine.py  terrain_encoder.py
monoforce/nodes/: camera_publisher.py  publisher.py  terrain_encoder.py
monoforce/scripts/: .gitignore  bevfusion_test  bevfusion_test.py  eval  eval.py  eval.sh  fit_terrain  fit_terrain.py  kkt_dphysics  learn_terrain_properties.sh  robot_control  robot_control.py  run  run.py  run.sh  run_physics_engine.py  test.py  train  train.py  train.sh  train_bevfusion.py  train_bevfusion.sh  train_friction  train_friction.py  train_friction.sh  train_lstm.py  train_wildscenes.py  train_wildscenes.sh
monoforce/singularity/: build.sh
monoforce/src/monoforce/: cloudproc.py  config.py  control.py  dphys_config.py  imgproc.py  losses.py  ros.py  transformations.py  utils.py  vis.py
monoforce/src/monoforce/configs/: __init__.py  base_config.py  robot_config.py  world_config.py
monoforce/src/monoforce/datasets/: __init__.py  coco.py  rellis3d.py  robingas.py  rough.py  utils.py  wildscenes.py
monoforce/src/monoforce/models/: __init__.py  dphysics.py  dphysics_warp.py
monoforce_demos/: CMakeLists.txt  package.xml
monoforce_demos/config/params/: marv.params  tradr.params  tradr2.params
monoforce_demos/config/rviz/: elevation_mapping.rviz  monoforce.rviz  monoforce_husky.rviz  monoforce_husky_oru.rviz  monoforce_marv.rviz  monoforce_rough.rviz  monoforce_tradr.rviz  monoforce_tradr2.rviz  tradr.rviz
monoforce_demos/launch/: elevation_mapping_dphys.launch  husky_gazebo_elevation_mapping_dphys.launch  husky_gazebo_monoforce.launch  monoforce_robingas.launch  monoforce_rough.launch
monoforce_demos/nodes/: monoforce_demo
monoforce_demos/scripts/: demo.sh  terrain_encoder_predictions  test.py  test.sh
monoforce_gazebo/: CMakeLists.txt  dependencies.rosinstall  package.xml  setup.cfg  setup.py
monoforce_gazebo/config/: localization.yaml
monoforce_gazebo/config/rviz/: husky.rviz
monoforce_gazebo/launch/: husky_gazebo.launch  husky_inspection_world.launch  husky_sim.launch  husky_sim.launch.py  keyboard_teleop.launch  sim.launch.py  spawn_husky.launch
monoforce_gazebo/models/terrain/: model.sdf
monoforce_gazebo/nodes/: robot_gt_pose_to_odom  robot_gt_pose_to_tf
monoforce_gazebo/urdf/: husky.urdf.xacro
monoforce_gazebo/urdf/accessories/: camera.urdf.xacro  ids_camera.urdf.xacro  imu.urdf.xacro  intel_realsense.urdf.xacro  ouster_lidar.urdf.xacro
monoforce_gazebo/worlds/: empty.world  emptyfarm_vegetation.world  front_loader.world  rubicon.world  simcity.world  simcity_dynamic.world  terrain.world  terrain_vegetation.world
monoforce_gazebo/worlds/meshes/: terrain.mtl
monoforce_navigation/: CMakeLists.txt  dependencies.rosinstall  package.xml
monoforce_navigation/config/elevation_mapping/postprocessing/: postprocessor_pipeline.yaml
monoforce_navigation/config/elevation_mapping/robots/: husky.yaml  marv.yaml
monoforce_navigation/config/slam/: icp_config_ctu.yaml  input_filters_ctu.yaml  input_filters_oru.yaml  mapper_node_oru.params  realtime_icp_config.yaml  realtime_input_filters.yaml
monoforce_navigation/launch/: elevation_mapping.launch  path_follower.launch  path_selector.launch  record.launch  slam.launch
monoforce_navigation/nodes/: path_follower  path_selector  path_to_map  publish_gt_gridmap  tf_to_pose_publisher
monoforce_ros/: CMakeLists.txt  package.xml  setup.py
monoforce_ros/launch/: dphysics.launch  geom_hm_estimator.launch  img_preproc.launch  monoforce.launch  physics_engine.launch  resize_imgs.launch  terrain_encoder.launch
monoforce_ros/nodes/: diff_physics  diff_physics.py  geom_hm_estimator  geom_hm_estimator.py  gridmaps_merger.py  monoforce  monoforce_node.py  physics_engine.py  terrain_encoder  terrain_encoder.py
(+256 files in other folders)
