<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>monoforce</name>
  <version>0.0.1</version>
  <description>MonoForce: Learnable Image-conditioned Physics Engine</description>
  <maintainer email="agishrus@fel.cvut.cz">ruslan</maintainer>
  <license>BSD</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>grid_map</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
